Fixed some images on smaller screens

--- a/css/custom.css
+++ b/css/custom.css
@@ -97,6 +97,10 @@ body a:hover {
     text-align: center;
 }
 
+.text-cetner {
+    text-align: center
+}
+
 
 /*---------------------------------------
   Contact section
